trunk/NewArchive/0b98f6449a84341a2111b33f48a3536e-50d9cfc8a1d350e7409e81e87c2653ba/output
++ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp:10:19: error: invalid use of incomplete type 'struct A::B<T>'
 A::B<T>::foo(U arg) {arg.UMember();}
                   ^
main.cpp:2:34: error: declaration of 'struct A::B<T>'
     template <typename T> struct B {
                                  ^
